documentResource added
